# AmigurumiDesigner

./: .gitignore  CMakeLists.txt  README.md  main.cpp
AmigurimiDesigner/: AmigurimiDesigner.sln  AmigurimiDesigner.vcxproj  D3DDeviceHolder.h  D3DDeviceHolder.ixx  PixelShader.hlsl  VertexShader.hlsl  application_basics.ixx  direct_x_structures.ixx  gui_wrapper.cpp  gui_wrapper.h  gui_wrapper.ixx  hwnd_wrapper.ixx  imgui_hack.h  imgui_holder.ixx  main.cpp  prescription_parser.ixx  projections.ixx  render_target_view_holder.ixx  vcpkg.json  vertex_calculations.ixx  viewport_configuration.ixx  window_procs.ixx
AmigurumiUnitTest/: AmigurumiUnitTest.vcxproj  application_basics_test.cpp
include/: ImGUI_Wrapper.h  SDL_wrappers.h
